# Arus

./: .dockerignore  .env.example  .gitattributes  .gitignore  .jscpd.json  .lintstagedrc.json  .prettierignore  .prettierrc.json  .replit  .size-limit.json  ADMIN-ACCESS-FIX.md  AI_ML_IMPROVEMENT_PROPOSAL.md  ALL_BUGS_FIXED.md  ARCHITECTURAL_AUDIT_REPORT.md  ARCHITECTURAL_AUDIT_REPORT_EVIDENCE_BASED.md  ARCHITECTURE-REVIEW-2025-10-27.md  ARCHITECTURE.md  ARUS_DB_CODE.txt  ARUS_FIX_SUMMARY.md  ARUS_INSTALLATION_WINDOWS.txt  ARUS_Professional_Evaluation.md  ARUS_SCHEMA.txt  ARUS_UI_UX_REFACTORING_PLAN.md  BUILD-SUMMARY.txt  BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.txt  CLAUDE.md  CLEANUP_SUMMARY.md  CODEBASE_AUDIT_REPORT.md  COMPREHENSIVE-ARCHITECTURE-REVIEW.md  CONTRIBUTING.md  CRITICAL_BUGS_FIXED.md  CRITICAL_FIXES_REQUIRED.md  Caddyfile  DEPLOYMENT-MODE-FIXES.md  DEPLOYMENT.md  DIGITAL_TWIN_REPORT.txt  DMG-FIX-COMPLETE.md  DMG_BUILD_STATUS.md  DMG_PACKAGING_GUIDE.md  (+152 more)
.agents/: agent_assets_metadata.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
attached_assets/: CHANGES.md  COMPREHENSIVE_SCHEMA_AUDIT.md  DECK LOG BOOK UPDATE_1764320320201.xlsx  DEPLOYMENT-INSTRUCTIONS.md  DESKTOP_MODE_FIX_COMPLETE.md  ER LOG BOOK_1764320310859.xlsx  FINAL_REVIEW_SUMMARY.md  LOGGING_IMPROVEMENTS.md  Pasted---1761197378499_1761197378499.txt  Pasted--1-scripts-audit-stack-js-scripts-audit-stack-js-import-fs-from-fs-import-path-from-pat-1762260695218_1762260695218.txt  Pasted--ARUS-Evidence-Based-Static-Review-Scope-reviewed-extra_1780308293745.txt  (+579 more)
src-tauri/: Cargo.toml  tauri.cloud.conf.json  tauri.conf.json  tauri.vessel.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/wix/: service-component.wxs
(+4643 files in other folders)
