[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "onnx>=1.21.0",
    "onnxconverter-common>=1.16.0",
    "onnxmltools>=1.16.0",
    "openpyxl>=3.1.5",
    "packaging>=26.2",
    "psycopg[binary]>=3.3.4",
    "scikit-learn>=1.8.0",
    "skl2onnx>=1.20.0",
    "xgboost>=3.2.0",
]
