[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    # Prod-hardening: tighten upper bounds on the ML stack so a future
    # xgboost 4.x or onnxmltools 2.x can't silently break the sidecar
    # contract (pred_contribs shape, tree-ensemble ONNX nodes, etc.).
    # Bump these caps deliberately after running scripts/ml/test-sidecar-crud.mjs.
    "numpy>=2.4.6,<3",
    "onnx>=1.21.0,<2",
    "onnxconverter-common>=1.16.0,<2",
    "onnxmltools>=1.16.0,<2",
    "openpyxl>=3.1.5",
    "packaging>=26.2",
    "psycopg[binary]>=3.3.4,<4",
    "scikit-learn>=1.8.0,<2",
    "skl2onnx>=1.20.0,<2",
    "xgboost>=3.2.0,<4",
]
