[package]
name = "arus"
version = "1.0.0"
description = "ARUS Marine Predictive Maintenance System"
authors = ["ARUS Team"]
edition = "2021"

[lib]
name = "arus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
